--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "dependencies": {
         "@types/react-router-dom": "^5.3.3",
         "@types/styled-components": "^5.1.26",
+        "dotenv": "^16.3.1",
+        "firebase": "^10.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-loader-spinner": "^5.4.5",
         "react-router-dom": "^6.15.0",
         "styled-components": "^6.0.7"
     },
