--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
         "build": "tsc && vite build"
     },
     "dependencies": {
+        "@tanstack/react-query": "^4.35.3",
         "@types/react-router-dom": "^5.3.3",
         "@types/styled-components": "^5.1.26",
+        "axios": "^1.5.0",
         "dotenv": "^16.3.1",
         "firebase": "^10.3.1",
         "primereact": "^9.6.2",
