--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,6 @@ VITE_PROJECT_ID=
 VITE_STORAGE_BUCKET=
 VITE_MESSAGING_SENDER_ID=
 VITE_APP_ID=
+
+#Backend API Base Url Connection
+VITE_API_BASE_URL=
