--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
         "axios": "^1.5.0",
         "dotenv": "^16.3.1",
         "firebase": "^10.3.1",
+        "moment": "^2.29.4",
         "primereact": "^9.6.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-loader-spinner": "^5.4.5",
         "react-router-dom": "^6.15.0",
-        "styled-components": "^6.0.7"
+        "react-toastify": "^9.1.3",
+        "styled-components": "^6.0.7",
+        "yup": "^1.3.2"
     },
     "devDependencies": {
         "@types/react": "^18.0.28",
